# UOSnake

./: .gitignore  CMakeLists.txt  README.md
doc/: Design.dia
src/: SCell.cpp  SCell.h  SCoord.cpp  SCoord.h  SDirection.h  SItem.cpp  SItem.h  SMap.cpp  SMap.h  Snake.cpp  Snake.h  main.cpp
tests/: SCellTest.cpp  SCoordTest.cpp  SnakeTest.cpp  main.cpp  test.smap
